Day-2 Files added

--- a/Angular/app2/src/app/app.component.html
+++ b/Angular/app2/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>ANGULAR5 APP</h1> <hr/>
+<div class="container">
+    <h1>ANGULAR5 {{title}}  </h1> <hr/>
+<h2>Welcome to my app</h2>
+<button class='btn btn-warning'>Click Me</button>
+</div>
+
+<app-employee></app-employee>
+<app-department></app-department>
